Fixing PNG image out of bound

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -266,6 +266,7 @@ html, body{
         img{
             max-width: 200px;
             min-width: 200px;
+            width: 200px;
         }
     }
 }
